--- a/app/views/frontend/pages/index.html.erb
+++ b/app/views/frontend/pages/index.html.erb
@@ -1,20 +1,28 @@
-<div class="w-2/3 mx-auto flex flex-col gap-8" data-controller="flag-checkbox" >
+<div class="w-2/3 mx-auto flex flex-col gap-8" data-controller="flag-command" >
   <!-- TITLE -->
   <h1 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Customize your rails app!!</h1>
 
   <!-- FORMULARIO PARA INTRODUCIR EL NOMBRE DE LA APP -->
-  <%= text_field_tag :app_name, nil, id: "appName", placeholder: "Enter app name" %>
+  <div class="w-full">
+    <%= text_field_tag :app_name, nil, id: "appName", 
+                       placeholder: "Enter app name",
+                       data: {
+                        'flag-command-target': 'input',
+                        action:'keyup->flag-command#updateOutput'
+                       },
+                       type: 'text',
+                       class: 'w-full'%>
+    <div data-flag-command-target="output" class="w-full p-8 text-slate-200">
+      rail new --skip-gitignore --skip-keeps --skip-action-mailbox --skip-action-text --skip-active-storage --skip-action-cable --skip-spring --skip-listen --skip-javascript --skip-turbolinks --skip-bootsnap --skip-webpack-install
+    </div>
+  </div>
 
   <!-- SECCION DONDE RENDERIZAR CON ESTILOS BASH EL COMANDO CON FLAGS -->
-  <%= link_to 'cambia el texxto', '', class:"px-4 py-2 border-indigo-500 cursor-pointer", data:{action: "click->flag-checkbox#change"} %>
-  <div data-flag-checkbox-target="flag" class="w-full border border-red-400 p-8 hidden">
-    texto inicial
-  </div>
-  
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Use Rails preset?</h2>
   <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
-      <%= render(FlagCheckboxComponent.new(flag: 'git', checked: true)) %>
-      <%= render(FlagCheckboxComponent.new(flag: 'javaScript', checked: false)) %>
-      <%= render(FlagCheckboxComponent.new(flag: 'bootsnap', checked: false)) %>
+      <%= render(FlagCommandComponent.new(flag: 'none', type: 'radio',checked: true)) %>
+      <%= render(FlagCommandComponent.new(flag: 'api', type: 'radio', checked: false)) %>
+      <%= render(FlagCommandComponent.new(flag: 'minimal', type: 'radio', checked: false)) %>
   </div>
 </div>
 
