--- a/app/components/flag_command_component/flag_command_component.html.erb
+++ b/app/components/flag_command_component/flag_command_component.html.erb
@@ -1,19 +1,29 @@
-<div class="flex items-center gap-8 px-6 py-3 hover:bg-slate-600 hover:cursor-pointer">
-    <input id="bordered-checkbox-<%= flag %>" 
-           type=<%= type %>
-           value="<%= flag %>"
-           name="bordered-checkbox"
-           data-action="change->flag-command#updateOutput"
-           data-flag-command-target=<%= type %> 
-           class="w-6 h-6 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600 hover:cursor-pointer" 
-           <%= "checked" if checked %> />
-    <label for="bordered-checkbox-<%= flag %>" 
-           class="w-full py-4 ml-2 text-sm font-medium text-slate-200 dark:text-gray-300 hover:cursor-pointer">
-           <div class="text-xl text-slate-200 py-3">
-            <%= t(".flag_command_component.#{flag}") %>
-           </div>
-          <div class="text-sm text-slate-200 dark:text-gray-300">
-            <%= t(".flag_command_component.#{flag}_description") %>
-          </div>
-    </label>
+<% css_classes_input = "w-6 h-6 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600 hover:cursor-pointer" %>
+<% css_classes_label = "w-full flex justify-center items-center gap-12 py-2 text-slate-200 dark:text-gray-300 hover:cursor-pointer" %>
+
+<div class="flex items-center gap-16 px-8 py-3 hover:bg-slate-600 hover:cursor-pointer">
+  <input  id="group-<%= target %>-<%= flag %>"
+          type="<%= type %>"
+          value="<%= flag %>"
+          name="<%= target %>"
+          data-action="change->flag-command#updateOutput"
+          data-flag-command-target="<%= target %>" 
+          class="<%= css_classes_input %>"
+          <%= "checked" if checked %> />
+
+  <label for="group-<%= target %>-<%= flag %>" class="<%= css_classes_label %>">
+    <div class="w-full flex flex-col justify-center items-start gap-2">
+      <div class="text-xl font-semibold text-slate-200 py-3">
+        <%= t(".flag_command_component.#{flag}") %>
+      </div>
+      <div class="text-slate-200 dark:text-gray-300">
+        <%= t(".flag_command_component.#{flag}_description") %>
+      </div>
+    </div>
+    <% if icon.present? %>
+      <figure class="flex justify-center items-center p-2 rounded-full">
+        <%= inline_svg_tag("icons/brands/#{icon}.svg", class: 'w-10 h-10') %>
+      </figure>
+    <% end %>
+  </label>
 </div>
