--- a/app/views/frontend/pages/index.html.erb
+++ b/app/views/frontend/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="w-2/3 mx-auto flex flex-col gap-8" data-controller="flag-command" >
+<div class="w-full md:w-1/2 lg:container mx-auto flex flex-col gap-8" data-controller="flag-command" >
   <!-- TITLE -->
   <h1 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Customize your rails app!!</h1>
 
@@ -16,34 +16,80 @@
     
   </div>
 
-<div class="bg-black text-white rounded-lg font-mono" data-controller="clipboard">
-  <div class="bg-gray-800 p-2 rounded-t-lg flex items-center justify-between">
-    <button data-clipboard-target="button" data-action="click->clipboard#copyToClipboard">📋 Copiar</button>
-    <div class="flex space-x-2">
-      <div class="w-3 h-3 bg-red-500 rounded-full"></div>
-      <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
-      <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+  <div data-controller="clipboard" class="sticky top-2 bg-black text-white rounded-lg font-mono">
+    <div class="bg-gray-800 p-2 rounded-t-lg flex items-center justify-between">
+      <button data-clipboard-target="button" data-action="click->clipboard#copyToClipboard">📋 Copiar</button>
+      <div class="flex space-x-2">
+        <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+      </div>
     </div>
+    <div data-flag-command-target="output"  data-clipboard-target="source" class="p-8 text-lg"></div>
   </div>
-  <div data-flag-command-target="output"  data-clipboard-target="source" class="p-8 text-lg"></div>
-</div>
 
 
   <!-- SECCION DONDE RENDERIZAR CON ESTILOS BASH EL COMANDO CON FLAGS -->
   <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Use Rails preset?</h2>
   <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
-      <%= render(FlagCommandComponent.new(flag: 'none', type: 'radio',checked: true)) %>
-      <%= render(FlagCommandComponent.new(flag: 'api', type: 'radio', checked: false)) %>
-      <%= render(FlagCommandComponent.new(flag: 'minimal', type: 'radio', checked: false)) %>
+    <%= render(FlagCommandComponent.new(flag: 'preset_none',  type: 'radio', target: 'preset', checked: true,)) %>
+    <%= render(FlagCommandComponent.new(flag: 'api',          type: 'radio', target: 'preset')) %>
+    <%= render(FlagCommandComponent.new(flag: 'minimal',      type: 'radio', target: 'preset')) %>
+  </div>
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Database</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'sqlite3',   type: 'radio', icon: 'sqlite',      target: 'database', checked: true)) %>
+    <%= render(FlagCommandComponent.new(flag: 'postgres', type: 'radio', icon: 'postgresql',  target: 'database')) %>
+    <%= render(FlagCommandComponent.new(flag: 'mysql',    type: 'radio', icon: 'mysql',       target: 'database')) %>
+    <%#= render(FlagCommandComponent.new(flag: 'mongo', type: 'radio', icon: 'mongodb')) %>
+  </div>
+
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Housekeeping</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'gitignore',  type: 'checkbox', target: 'housekeeping')) %>
+    <%= render(FlagCommandComponent.new(flag: 'keeps',      type: 'checkbox', target: 'housekeeping')) %>
+    <%= render(FlagCommandComponent.new(flag: 'bootsnap',   type: 'checkbox', target: 'housekeeping')) %>
+    <%= render(FlagCommandComponent.new(flag: 'bundle',     type: 'checkbox', target: 'housekeeping')) %>
+  </div>
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Asset Pipeline</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'pipeline_none',  type: 'radio', target: 'pipeline', checked: true)) %>
+    <%= render(FlagCommandComponent.new(flag: 'sprockets',      type: 'radio', target: 'pipeline')) %>
+    <%= render(FlagCommandComponent.new(flag: 'propshaft',      type: 'radio', target: 'pipeline')) %>
+  </div>
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">JavaScript</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'javascript_none',  type: 'radio', target: 'javascript', checked: true)) %>
+    <%= render(FlagCommandComponent.new(flag: 'importmap',        type: 'radio', target: 'javascript')) %>
+    <%= render(FlagCommandComponent.new(flag: 'esbuild',          type: 'radio', icon: 'esbuild', target: 'javascript')) %>
+    <%= render(FlagCommandComponent.new(flag: 'rollup',           type: 'radio', icon: 'rollup',  target: 'javascript')) %>
+    <%= render(FlagCommandComponent.new(flag: 'webpack',          type: 'radio', icon: 'webpack', target: 'javascript')) %>
+  </div>
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">CSS</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'css_none',   type: 'radio', target: 'css', checked: true)) %>
+    <%= render(FlagCommandComponent.new(flag: 'bootstrap',  type: 'radio', icon: 'bootstrap', target: 'css')) %>
+    <%= render(FlagCommandComponent.new(flag: 'bulma',      type: 'radio', icon: 'bulma',     target: 'css')) %>
+    <%= render(FlagCommandComponent.new(flag: 'tailwind',   type: 'radio', icon: 'tailwind',  target: 'css')) %>
+    <%= render(FlagCommandComponent.new(flag: 'postcss',    type: 'radio', icon: 'postcss',   target: 'css')) %>
+    <%= render(FlagCommandComponent.new(flag: 'sass',       type: 'radio', icon: 'sass',      target: 'css')) %>
+  </div>
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Rails Goodies</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'cable',    type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'job',      type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'mailbox',  type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'mailer',   type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'record',   type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'storage',  type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'text',     type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'hotwire',  type: 'checkbox', target: 'goodies')) %>
+    <%= render(FlagCommandComponent.new(flag: 'jbuilder', type: 'checkbox', target: 'goodies')) %>
+  </div>
+  <h2 class="w-full flex justify-center items-center text-4xl font-bold text-slate-200 py-4">Test</h2>
+  <div class="flex flex-col [&>*:nth-child(odd)]:bg-slate-800 [&>*:nth-child(even)]:bg-slate-700 [&>*:first-child]:rounded-t-xl [&>*:last-child]:rounded-b-xl">
+    <%= render(FlagCommandComponent.new(flag: 'test',   type: 'checkbox', target: 'tests')) %>
+    <%= render(FlagCommandComponent.new(flag: 'system-test', type: 'checkbox', target: 'tests')) %>
   </div>
 </div>
 
-<!-- Checkbox components 
-<div class="flex items-center pl-4 w-full flex-nowrap gap-4 border border-slate-900 rounded-xl shadow shadow-slate-200 text-slate-200 bg-slate-800 hover:bg-slate-300 hover:text-slate-800 hover:cursor-pointer">
-    <input id="bordered-checkbox-1" type="checkbox" value="" name="bordered-checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-    <label for="bordered-checkbox-1" class="w-full py-4 ml-2 text-sm font-medium w-10/12 flex flex-col justify-center items-start gap-4 px-4 py-2">
-      <div>Titulo: ipsum dolor sit amet consectetur</div>
-      <div>Descripcion: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugit aliquam magni autem sed delectus corrupti dicta voluptates nemo amet repellat reprehenderit, alias, doloremque soluta illo maiores qui officiis pariatur?</div>
-    </label>
-</div>
--->
