--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body class="bg-slate-900">
-    <main class="container mx-auto mt-28 px-5 flex flex-col">
+    <main class="flex flex-col py-12">
       <%= yield %>
     </main>
   </body>
