--- a/app/views/frontend/pages/index.html.erb
+++ b/app/views/frontend/pages/index.html.erb
@@ -16,8 +16,8 @@
     
   </div>
 
-  <div data-controller="clipboard" class="sticky top-2 bg-black text-white rounded-lg font-mono">
-    <div class="bg-gray-800 p-2 rounded-t-lg flex items-center justify-between">
+  <div data-controller="clipboard" class="sticky top-2 bg-gray-950 text-white rounded-lg font-monod">
+    <div class="bg-slate-600 text-slate-200 p-2 rounded-t-lg flex items-center justify-between">
       <button data-clipboard-target="button" data-action="click->clipboard#copyToClipboard">📋 Copiar</button>
       <div class="flex space-x-2">
         <div class="w-3 h-3 bg-red-500 rounded-full"></div>
