--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,7 +11,7 @@
                         action:'keyup->flag-command#updateOutput'
                        },
                        type: 'text',
-                       class: 'w-full'%>
+                       class: 'w-full text-slate-900 font-semibold' %>
 
     
   </div>
