--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,5 @@
+@import "components/buttons.tailwind.css";
+@import "components/link.tailwind.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
