--- a/app/views/pages/docker.html.erb
+++ b/app/views/pages/docker.html.erb
@@ -1,1 +1,37 @@
-<%= @primary_commands.inspect %>
+<section data-controller="docker-command search"
+         class="w-full md:container mx-auto grid grid-cols-6 gap-32">
+  <%= form_with url: docker_path, method: :get, html: { class: 'w-full col-span-2 flex flex-col justify-center items-center gap-8'} do |form| %>
+
+      <%= select_tag "first_level", 
+          options_for_select(@first_level&.map { |option| [option['label'], option['value']] }),
+          prompt: "Seleciona un comando",
+          data: { docker_command_target: "firstLevel", action: "docker-command#handleFirstLevelChange" },
+          class: 'w-full text-lg text-slate-200 bg-slate-700 font-bold rounded-lg p-3'
+      %>
+
+      <%= select_tag "second_level", 
+          options_for_select([]), 
+          data: { 
+            docker_command_target: "secondLevel", 
+            action: "change->docker-command#handleSecondLevelChange" 
+          },
+          class: 'w-full text-lg text-slate-200 bg-slate-700 font-semibold rounded-lg p-3'
+      %>
+  <% end %>
+  <div data-controller="clipboard" class="col-span-4 bg-gray-950 text-white rounded-lg font-monod">
+    <div class="bg-slate-600 text-slate-200 p-2 rounded-t-lg flex items-center justify-between">
+      <button data-clipboard-target="button" data-action="click->clipboard#copyToClipboard">📋 Copiar</button>
+      <div class="flex space-x-2">
+        <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+        <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+      </div>
+    </div>
+    <div data-docker-command-target="bash" class="p-8 text-xl">
+      <span class="text-green-500">$</span>
+      <span class="text-pink-400 animate-pulse ml-2">|</span>
+    </div>
+  </div>
+  <div data-docker-command-target="explanation" class="w-full hidden px-4 py-12 text-xl text-slate-200 bg-slate-700 rounded-lg col-start-1 col-end-7  transition-opacity ease-in duration-700 opacity-100"></div>
+</section>
+  
