refactor rails new io feature, rename stimulus controllore from flag command to rails command

--- a/app/components/flag_command_component/flag_command_component.html.erb
+++ b/app/components/flag_command_component/flag_command_component.html.erb
@@ -6,8 +6,8 @@
           type="<%= type %>"
           value="<%= flag %>"
           name="<%= target %>"
-          data-action="change->flag-command#updateOutput"
-          data-flag-command-target="<%= target %>" 
+          data-action="change->rails-command#updateOutput"
+          data-rails-command-target="<%= target %>" 
           class="<%= css_classes_input %>"
           <%= "checked" if checked %> />
 
