--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -16,5 +16,6 @@
     <main class="flex flex-col py-12">
       <%= yield %>
     </main>
+    <%= render 'layouts/shared/footer' %>
   </body>
 </html>
