--- a/app/views/pages/docker.html.erb
+++ b/app/views/pages/docker.html.erb
@@ -33,10 +33,9 @@
     </div>
   </div>
   <div data-docker-command-target="explanation" class="w-full hidden px-4 py-12 text-xl text-slate-200 bg-slate-700 rounded-lg col-start-1 col-end-7  transition-opacity ease-in duration-700 opacity-100"></div>
+
+  <%= turbo_frame_tag 'commands', src: commands_path, loading: :lazy, class: 'w-full col-start-1 col-end-7 gap-y-8 mb-8' do %>
+    cargando ....
+  <% end %>
 </section>
   
-
-
-<%= turbo_frame_tag 'commands', src: commands_path, loading: :lazy do %>
-  cargando ....
-<% end %>
